Some fucntions in user model
